name:                website
version:             0.3.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/othercriteria/website#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Klein
maintainer:          othercriteria@gmail.com
copyright:           2016 Daniel Klein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable website
  hs-source-dirs:      generator
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -optl -w -dynamic -O2
  build-depends:       base
                     , containers
                     , pandoc
                     , hakyll == 4.7.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/othercriteria/website
