name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll == 4.6.*
  ghc-options:      -Wall -threaded -optl -w -dynamic -O2
  default-language: Haskell2010
