name:                website
version:             0.3.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/othercriteria/website#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Klein
maintainer:          othercriteria@gmail.com
copyright:           2015 Daniel Klein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable website-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -optl -w -dynamic -O2
  build-depends:       base
                     , containers
                     , pandoc
                     , hakyll == 4.7.*
                     , website
  default-language:    Haskell2010

test-suite website-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , website
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/othercriteria/website
